[package]
name = "canvas_metal_nanovg"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
foreign-types = "0.3"
gl = "0.14"
metal = "0.18"
objc = "0.2"
sdl2 = "0.33"
sdl2-sys = "0.33"
arrayvec = "0.5"
font-kit = "0.6"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.pathfinder_canvas]
features = ["pf-text"]
path = "../../canvas"

[dependencies.pathfinder_color]
path = "../../color"

[dependencies.pathfinder_content]
path = "../../content"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_metal]
path = "../../metal"

[dependencies.pathfinder_renderer]
path = "../../renderer"

[dependencies.pathfinder_resources]
path = "../../resources"

[dependencies.pathfinder_simd]
path = "../../simd"
